# structure_interpretation_computer_programs

./: Cargo.toml  README.md  list.todo
src/: main.rs
src/chapter1/: basic_newton_sqrt.rs  chapter1.rs  iter_newton_cube_root.rs  iter_newton_sqrt.rs  mod.rs
src/chapter2/: chapter2.rs
src/chapter3/: chapter3.rs
