[package]
name = "structure_interpretation_computer_programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
rand = "0.8.5"
plotly = { git = "https://github.com/AnBowell/plotly.git", branch = "mesh3d" }
itertools = "0.10.3"
itertools-num = "0.1.3"
